--- a/app/src/main/res/layout/fragment_skins.xml
+++ b/app/src/main/res/layout/fragment_skins.xml
@@ -5,24 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".viewPager.screens.Skins"
-    android:background="@color/white"
+    android:background="@color/myDark"
     android:layout_gravity="center"
     >
 
 
     <TableLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:weightSum="99"
+        >
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_skin1"
-            android:layout_marginTop="40dp"
-            android:layout_height="220dp"
+            android:layout_weight="33"
             app:cardBackgroundColor="@color/myDark"
             >
             <TableRow
@@ -30,7 +31,6 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 >
-
                 <ImageView
                     android:id="@+id/skin1"
                     android:layout_width="match_parent"
@@ -44,11 +44,9 @@
             </TableRow>
         </androidx.cardview.widget.CardView>
 
-
-
         <androidx.cardview.widget.CardView
             android:id="@+id/card_skin2"
-            android:layout_height="220dp"
+            android:layout_weight="33"
             app:cardBackgroundColor="@color/myDark"
             >
             <TableRow
@@ -64,8 +62,6 @@
                     android:padding="10dp"
                     android:contentDescription="@string/champion_skin"
                     android:scaleType="fitXY"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
                     tools:layout_editor_absoluteX="130dp"
                     tools:layout_editor_absoluteY="106dp"
                     tools:src="@tools:sample/avatars" />
@@ -75,7 +71,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card_skin3"
             android:layout_marginTop="0dp"
-            android:layout_height="220dp"
+            android:layout_weight="33"
             app:cardBackgroundColor="@color/myDark"
             >
     <TableRow
@@ -89,8 +85,6 @@
             android:id="@+id/skin3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:contentDescription="@string/champion_skin"
             android:scaleType="fitXY"
             tools:layout_editor_absoluteX="130dp"
